fix top panel bigger top panel with middle vertical alignment transparent background for logo at print

--- a/risonia_theme/css/theme.css
+++ b/risonia_theme/css/theme.css
@@ -8,8 +8,8 @@
 
 /*anchor offset for myTop*/
 h1,h2,h3,h4,h5,h6 {
-  padding-top: 80px;
-  margin-top: -80px;
+  padding-top: 100px;
+  margin-top: -100px;
 }
 .search-results h3 {
   /*but not for mkdocs-search-results*/
